--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,6 +4,9 @@
 	<title></title>
 </head>
 <body>
-	<h1>{{msg}}</h1>
+	<nav class="navbar">
+		<a class="navbar-brand" href="#">Reddit.js</a>
+	</nav>
+	<h1>Reddit.JS</h1>
 </body>
 </html>
