--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,9 @@
     <title>Reddit.js</title>
   </head>
 <body>
-
-  {{{body}}}
+	<div class="container">
+	 {{{body}}}
+  	</div>
 
 </body>
 </html>
