--- a/views/posts-new.handlebars
+++ b/views/posts-new.handlebars
@@ -6,12 +6,17 @@
 <body>
 	<nav class="navbar">
 		<a class="navbar-brand" href="#">Reddit.js</a>
-		<a href="/posts/new" class="btn btn-primary navbar-btn">New Post</a>
-	<ul class="nav navbar-nav navbar-right">
-      <li><a href="/logout">Logout</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/sign-up">Sign Up</a></li>
-    </ul>
+		{{#if currentUser}}
+  <a href="/posts/new" class="btn btn-primary navbar-btn">New Post</a>
+{{/if}}
+<ul class="nav navbar-nav navbar-right">
+  {{#if currentUser}}
+    <li><a href="/logout">Logout</a></li>
+  {{else}}
+    <li><a href="/login">Login</a></li>
+    <li><a href="/sign-up">Sign Up</a></li>
+  {{/if}}
+</ul>
 	</nav>
 	<div class="row">
   <div class="col-sm-4 col-sm-offset-4">
