--- a/views/posts-show.handlebars
+++ b/views/posts-show.handlebars
@@ -14,6 +14,7 @@
 </nav>
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
+  	<p>{{post.author.username}}</p>
     <a href="{{post.url}}" class="lead">{{post.title}}</a>
     <p>{{post.summary}}</p>
   </div>
