--- a/views/posts-show.handlebars
+++ b/views/posts-show.handlebars
@@ -26,5 +26,5 @@
    </div>
 </form>
 {{#each post.comments}}
-  <p>{{this.content}}</p>
+  {{> comment comment=this postId=../post._id}}
 {{/each}}
